--- a/TestAPI/pom.xml
+++ b/TestAPI/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>wtf.dpt</groupId>
+            <artifactId>jHex</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
